--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,16 @@ jobs:
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
-      # 4) Create GitHub Authentication Secret for ArgoCD
+      # 4) Configure kubectl (ensure it uses the correct GKE context)
+      ############################################################
+      - name: Configure kubectl
+        run: |
+          gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
+          kubectl config current-context  # Check if the correct context is set
+          kubectl get nodes  # Test the connection to the cluster
+
+      ############################################################
+      # 5) Create GitHub Authentication Secret for ArgoCD
       ############################################################
       - name: Create GitHub Authentication Secret
         run: |
