--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     env:
-      # Keep this so that gcloud & other tools can find your key file if needed:
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-key.json
 
     steps:
@@ -22,13 +21,21 @@ jobs:
         uses: actions/checkout@v3
 
       ############################################################
-      # 2) Install Dependencies
+      # 2) Debug listing
+      ############################################################
+      - name: List repository
+        run: |
+          echo "Root directory:"
+          ls -la
+          echo "Terraform folder:"
+          ls -la terraform || true
+      ############################################################
+      # 3) Install Dependencies
       ############################################################
       - name: Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y apt-transport-https ca-certificates gnupg curl jq unzip python3-pip
-
           # Install Terraform
           TF_VERSION="1.4.6"
           curl -sSL "https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip" -o terraform.zip
@@ -39,72 +46,38 @@ jobs:
           export PATH="/usr/local/bin:$PATH"
           rm -rf tfbin terraform.zip
           terraform -version
-
           # Install Google Cloud CLI
           echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee /etc/apt/sources.list.d/cloud-sdk.list
           curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
           sudo apt-get update && sudo apt-get install -y google-cloud-cli
-
           # Install kubectl
           sudo apt-get install -y kubectl
-
           # Install gke-gcloud-auth-plugin
           sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-
           # Install helm
           HELM_VERSION="v3.12.0"
           curl -sSL "https://get.helm.sh/helm-${HELM_VERSION}-linux-amd64.tar.gz" -o helm.tar.gz
           tar xvf helm.tar.gz
           sudo mv linux-amd64/helm /usr/local/bin/helm
-
           # Install Vault CLI
           VAULT_VERSION="1.14.2"
           curl -fsSL "https://releases.hashicorp.com/vault/${VAULT_VERSION}/vault_${VAULT_VERSION}_linux_amd64.zip" -o vault.zip
           unzip vault.zip
           sudo mv vault /usr/local/bin/
           vault version
-
           # Install Python dependencies
           pip3 install --upgrade pip
           pip3 install -r requirements.txt || true
-
       ############################################################
-      # 3) GCP Authentication
+      # 4) GCP Authentication
       ############################################################
       - name: GCP Auth
         run: |
           echo '${{ secrets.GCP_SA_KEY }}' | base64 --decode > $GITHUB_WORKSPACE/gcp-key.json
           gcloud auth activate-service-account --key-file=$GITHUB_WORKSPACE/gcp-key.json
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-
       ############################################################
-      # 4) Configure kubectl (ensure it uses the correct GKE context)
-      ############################################################
-      - name: Configure kubectl
-        run: |
-          # Critical: enable the new GKE auth plugin
-          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
-
-          gcloud container clusters get-credentials vault-ha-cluster \
-            --zone ${{ secrets.GCP_ZONE }} \
-            --project ${{ secrets.GCP_PROJECT_ID }}
-
-          kubectl config current-context  # Check current context
-          kubectl get nodes              # Test connection
-
-      ############################################################
-      # 5) Create GitHub Authentication Secret for ArgoCD
-      ############################################################
-      - name: Create GitHub Authentication Secret
-        run: |
-          kubectl delete secret argocd-repo-creds -n argocd --ignore-not-found=true
-          kubectl create secret generic argocd-repo-creds \
-            --from-literal=username=casual-cat \
-            --from-literal=password=${{ secrets.GITHUB_TOKEN }} \
-            -n argocd
-
-      ############################################################
-      # 6) Terraform Import Keyring (Optional)
+      # 5) Terraform Import Keyring (Optional)
       ############################################################
       - name: Terraform Import Keyring
         run: |
@@ -112,11 +85,10 @@ jobs:
           terraform init -backend-config="bucket=tfstate-bucket-instamini" \
                          -backend-config="prefix=terraform/state"
           terraform import google_kms_key_ring.vault_ring \
-            "projects/${{ secrets.GCP_PROJECT_ID }}/locations/${{ secrets.GCP_REGION }}/keyRings/${{ secrets.KMS_KEY_RING }}" \
+            projects/${{ secrets.GCP_PROJECT_ID }}/locations/${{ secrets.GCP_REGION }}/keyRings/${{ secrets.KMS_KEY_RING }} \
             || echo "KeyRing doesn't exist or already imported"
-
       ############################################################
-      # 7) Test Python App (Optional)
+      # 6) Test Python App (Optional)
       ############################################################
       - name: Test Python App
         env:
@@ -127,9 +99,8 @@ jobs:
           MYSQL_DB:   ${{ secrets.MYSQL_DB }}
         run: |
           python3 -m unittest discover -s tests
-
       ############################################################
-      # 8A) Check if GKE cluster exists
+      # 7A) Check if GKE cluster exists
       ############################################################
       - name: Check if cluster exists
         id: clustercheck
@@ -140,9 +111,8 @@ jobs:
           else
             echo "cluster_exists=false" >> $GITHUB_OUTPUT
           fi
-
       ############################################################
-      # 8B) Conditionally create cluster+nodepool (if it doesn't exist)
+      # 7B) Conditionally create cluster+nodepool
       ############################################################
       - name: Terraform Apply (Create Cluster)
         if: steps.clustercheck.outputs.cluster_exists == 'false'
@@ -163,25 +133,16 @@ jobs:
             -target=google_container_cluster.primary \
             -target=google_container_node_pool.primary_nodes \
             -auto-approve
-
       ############################################################
-      # 8C) Configure Kubeconfig (retry until the cluster is available)
+      # 7C) Configure Kubeconfig
       ############################################################
       - name: Configure Kubeconfig
         run: |
-          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
-          for i in {1..10}; do
-            if gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}; then
-              kubectl get nodes
-              break
-            else
-              echo "Cluster vault-ha-cluster not found, retrying in 30 seconds..."
-              sleep 30
-            fi
-          done
-
+          gcloud container clusters get-credentials vault-ha-cluster \
+            --zone ${{ secrets.GCP_ZONE }} \
+            --project ${{ secrets.GCP_PROJECT_ID }}
       ############################################################
-      # 9) Terraform Apply (KMS + Vault + local-exec init)
+      # 7D) Terraform Apply (KMS + Vault + local-exec init)
       ############################################################
       - name: Terraform Apply (KMS + Vault)
         env:
@@ -196,13 +157,11 @@ jobs:
         run: |
           cd terraform
           terraform apply -auto-approve
-
       ############################################################
-      # 10) Create MySQL Secret (for your app)
+      # 8) Create MySQL Secret (for your app)
       ############################################################
       - name: Create MySQL Secret
         run: |
-          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
           gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
           kubectl delete secret mysite-db-secrets -n default --ignore-not-found=true
           kubectl create secret generic mysite-db-secrets -n default \
@@ -211,9 +170,8 @@ jobs:
             --from-literal=MYSQL_USER=${{ secrets.MYSQL_USER }} \
             --from-literal=MYSQL_PASS=${{ secrets.MYSQL_PASS }} \
             --from-literal=MYSQL_DB=${{ secrets.MYSQL_DB }}
-
       ############################################################
-      # 11) Login to Docker Hub & Build/Push your image
+      # 9) Login to Docker Hub & Build/Push your image
       ############################################################
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -231,45 +189,30 @@ jobs:
           platforms: linux/amd64
 
       ############################################################
-      # 12) Re-Configure kubectl (again)
+      # 10) Re-Configure kubectl
       ############################################################
       - name: Configure kubectl (again)
         run: |
-          export USE_GKE_GCLOUD_AUTH_PLUGIN=True
-          for i in {1..10}; do
-            if gcloud container clusters get-credentials vault-ha-cluster --zone ${{ secrets.GCP_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}; then
-              kubectl get nodes
-              break
-            else
-              echo "Cluster vault-ha-cluster not found, retrying in 30 seconds..."
-              sleep 30
-            fi
-          done
-
+          gcloud container clusters get-credentials vault-ha-cluster \
+            --zone ${{ secrets.GCP_ZONE }} \
+            --project ${{ secrets.GCP_PROJECT_ID }}
       ############################################################
-      # 13) Install Argo CD & Create App
+      # 11) Install Argo CD & Create App
       ############################################################
       - name: Install Argo CD & Create App
         run: |
           kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
           kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
           kubectl rollout status deployment argocd-server -n argocd --timeout=300s
-
           curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           chmod +x argocd
           sudo mv argocd /usr/local/bin/argocd
-
           kubectl wait --for=condition=available --timeout=300s deployment/argocd-server -n argocd
-
           ARGOCD_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
-
-          # Port-forward the ArgoCD service
-          kubectl port-forward svc/argocd-server -n argocd 8080:443 &
-          sleep 5  # Allow time for port-forward
-
-          argocd login localhost:8080 --username admin --password "$ARGOCD_PW" --insecure --grpc-web
-
-          # Create Application with GitHub Authentication
+          argocd login argocd-server.argocd.svc.cluster.local:443 \
+            --username admin \
+            --password "$ARGOCD_PW" \
+            --insecure --grpc-web
           argocd app create instamini \
             --repo https://github.com/casual-cat/instamini-project.git \
             --path helm/instamini \
@@ -281,13 +224,11 @@ jobs:
             --upsert \
             --insecure \
             --grpc-web
-
           argocd app wait instamini --operation --timeout=300 --insecure --grpc-web
           argocd app sync instamini --insecure --grpc-web
           argocd app wait instamini --sync --health --timeout=300 --insecure --grpc-web
-
       ############################################################
-      # 14) Print External IP
+      # 12) Print External IP
       ############################################################
       - name: Print External IP
         run: |
