--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,7 @@ jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
     env:
-      # Provide the service account key to all steps (decoded below)
       GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/gcp-key.json
-
-      # These go to Terraform
       TF_VAR_vault_gcp_sa_key_b64: ${{ secrets.VAULT_GCP_SA_KEY_B64 }}
       TF_VAR_db_root_password: ${{ secrets.DB_ROOT_PASSWORD }}
 
@@ -76,7 +73,7 @@ jobs:
           sudo mv vault /usr/local/bin/
           vault version
 
-          # Python deps (if you have a requirements.txt)
+          # Python deps
           pip3 install --upgrade pip
           pip3 install -r requirements.txt || true
 
@@ -85,13 +82,12 @@ jobs:
       ############################################################
       - name: GCP Auth
         run: |
-          # Decode your base64-encoded GCP service account JSON
           echo '${{ secrets.GCP_SA_KEY }}' | base64 --decode > $GITHUB_WORKSPACE/gcp-key.json
           gcloud auth activate-service-account --key-file=$GITHUB_WORKSPACE/gcp-key.json
           gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
-      # 5) Terraform Import (KMS ring/key & Vault secret)
+      # 5) Terraform Import optional KMS resources
       ############################################################
       - name: Terraform Import optional KMS resources
         run: |
@@ -100,19 +96,16 @@ jobs:
             -backend-config="bucket=tfstate-bucket-instamini" \
             -backend-config="prefix=terraform/state"
 
-          # Attempt to import the Key Ring (ignore errors if it doesn’t exist yet)
           terraform import \
             google_kms_key_ring.vault_ring \
             "projects/${{ secrets.GCP_PROJECT_ID }}/locations/${{ secrets.GCP_REGION }}/keyRings/${{ secrets.KMS_KEY_RING }}" \
             || echo "Key Ring not found, continuing..."
 
-          # Attempt to import the Crypto Key
           terraform import \
             google_kms_crypto_key.vault_key \
             "projects/${{ secrets.GCP_PROJECT_ID }}/locations/${{ secrets.GCP_REGION }}/keyRings/${{ secrets.KMS_KEY_RING }}/cryptoKeys/${{ secrets.KMS_CRYPTO_KEY }}" \
             || echo "Crypto Key not found, continuing..."
 
-          # Attempt to import the Secret Manager secret
           terraform import \
             google_secret_manager_secret.root_token_secret \
             "projects/${{ secrets.GCP_PROJECT_ID }}/secrets/vault-${{ secrets.KMS_CRYPTO_KEY }}-token" \
@@ -153,6 +146,7 @@ jobs:
           TF_VAR_gcp_project: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_gcp_region:  ${{ secrets.GCP_REGION }}
           TF_VAR_gcp_zone:    ${{ secrets.GCP_ZONE }}
+          TF_VAR_vault_gcp_sa_key_b64: ${{ secrets.VAULT_GCP_SA_KEY_B64 }}
           TF_VAR_kms_key_ring: ${{ secrets.KMS_KEY_RING }}
           TF_VAR_kms_crypto_key: ${{ secrets.KMS_CRYPTO_KEY }}
           TF_VAR_cloud_sql_instance_name: ${{ secrets.CLOUD_SQL_INSTANCE_NAME }}
@@ -232,35 +226,47 @@ jobs:
             --project ${{ secrets.GCP_PROJECT_ID }}
 
       ############################################################
-      # 11) Install Argo CD & Create App
+      # 11) Install Argo CD & Create App (Port-forward fix)
       ############################################################
       - name: Install Argo CD & Create App
         run: |
+          # 1) Create argocd namespace & install Argo CD
           kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
           kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+
+          # 2) Wait for argocd-server
           kubectl rollout status deployment argocd-server -n argocd --timeout=300s
 
-          # Download Argo CD CLI
+          # 3) Download Argo CD CLI
           curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           chmod +x argocd
           sudo mv argocd /usr/local/bin/argocd
 
+          # Wait for the deployment to be "available"
           kubectl wait --for=condition=available --timeout=300s deployment/argocd-server -n argocd
 
+          # 4) Port-forward in background: 8080 -> argocd-server:443
+          kubectl port-forward -n argocd svc/argocd-server 8080:443 &
+          PORT_FORWARD_PID=$!
+          sleep 5
+
+          # 5) Get initial admin password
           ARGOCD_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
-          argocd login argocd-server.argocd.svc.cluster.local:443 \
+
+          # 6) Argo CD CLI login via localhost:8080
+          argocd login localhost:8080 \
             --username admin \
             --password "$ARGOCD_PW" \
-            --insecure --grpc-web
+            --insecure \
+            --grpc-web
 
           # If your GitHub repo is PRIVATE, add credentials:
           # argocd repo add https://github.com/casual-cat/instamini-project.git \
           #   --username $GITHUB_USER \
           #   --password $GITHUB_TOKEN \
           #   --insecure
-          # Otherwise skip if it's public.
 
-          # Create the Argo CD app
+          # 7) Create the Argo CD app
           argocd app create instamini \
             --repo https://github.com/casual-cat/instamini-project.git \
             --path helm/instamini \
@@ -273,9 +279,13 @@ jobs:
             --insecure \
             --grpc-web
 
+          # 8) Wait/Sync the app
           argocd app wait instamini --operation --timeout=300 --insecure --grpc-web
           argocd app sync instamini --insecure --grpc-web
           argocd app wait instamini --sync --health --timeout=300 --insecure --grpc-web
+
+          # 9) Kill the port-forward
+          kill $PORT_FORWARD_PID
 
       ############################################################
       # 12) Print External IP
