--- a/terraform/vault-values.yaml
+++ b/terraform/vault-values.yaml
@@ -1,6 +1,8 @@
 server:
   extraConfig: |
     ui = true
+    disable_mlock = true
+    
     listener "tcp" {
       address     = "0.0.0.0:8200"
       tls_disable = true
