--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -263,12 +263,14 @@ jobs:
             exit 1
           fi
 
+          sleep 30
+
           # 5) Get the initial admin password
           ARGOCD_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret \
             -o jsonpath="{.data.password}" | base64 -d)
 
           # 6) Argo CD CLI login via the new LoadBalancer IP
-          argocd login "$EXTERNAL_IP" \
+          argocd login "$EXTERNAL_IP:443" \
             --username admin \
             --password "$ARGOCD_PW" \
             --insecure \
